Suppress another warning when running on newer JDKs
This is coming from kotlinc and we can't fix it ourselves, so suppression
is probably the best approach for now. https://github.com/facebook/ktfmt/issues/533